[package]
name = "passforge"
version = "1.0.0"
description = "An Opensource Password Generator"
authors = ["Sandun Wiratunga"]
license = "MIT"
repository = "https://github.com/sandunwira/PassForge"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.1", features = [ "clipboard-all", "updater", "fs-all", "window-show", "window-unminimize", "window-close", "window-minimize", "window-unmaximize", "window-maximize", "window-hide", "shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
